Fix: résolution du check qui était visible avant le de passer la souris dessus en desktop

--- a/sass/a_la_fr.scss
+++ b/sass/a_la_fr.scss
@@ -341,7 +341,7 @@ body {
     height: 100px;
     background: #99e2d0;
     border-radius: 0px 15px 15px 0px;
-    margin-right: -80px; /* Hide it initially */
+    margin-right: -120px; /* Hide it initially */
     transition: margin-right 0.5s, width 0.5s;
   }
 
